# freecad-pyoptools

./: .gitignore  .readthedocs.yml  GUI  InitGui.py  README.md  package.xml  pyOpToolsWB  readthedocs.yml  setup.py  version.py
GUI/: Aperture.ui  CatalogComponent.ui  CylindricalLens.ui  DoubletLens.ui  DovePrism.ui  IdealThickLens.ui  Optimize.ui  PowellLens.ui  RaysArray.ui  RaysParallel.ui  RaysPoint.ui  Sensor.ui  SphericalLens.ui
doc/: citing_freecad_pyoptools.rst  conf.py  index.rst  install.rst  installation.rst  newmodel.rst
doc/source/: conf.py  index.rst  newmodel.rst
freecad/pyoptools/: __init__.py  init_gui.py
freecad/pyoptools/GUI/: AlignRotation.ui  Aperture.ui  BSCube.ui  CatalogComponent.ui  CylindricalLens.ui  DiffractionGratting.ui  DoubletLens.ui  DovePrism.ui  IdealThickLens.ui  LensData.ui  Optimize.ui  PentaPrism.ui  PositionMirrorOn2Rays.ui  PositionOnRay.ui  PowellLens.ui  Ray.ui  RaysArray.ui  RaysParallel.ui  RaysPoint.ui  RectMirror.ui  RightAnglePrism.ui  Rotation.ui  RoundMirror.ui  Sensor.ui  SimpleDMD.ui  SphericalLens.ui  TestGui.ui  materialWidget.ui  positionWidget.ui
freecad/pyoptools/macros/: angular_adjustment.py  clear.py  rayselyest.py  test_gui.py
freecad/pyoptools/pyOpToolsWB/: FEEDBACK_IMPLEMENTATION_GUIDE.md  __init__.py  about.py  alignrotation.py  aperture.py  bscube.py  catalogcomponent.py  component_info_formatter.py  cylindricallens.py  diffractiongratting.py  doubletlens.py  doveprism.py  feedback.py  lensdata.py  lightsourcespanel.py  optimize.py  pentaprism.py  positionmirroron2rays.py  positiononray.py  powelllens.py  propagate.py  pyopPlot.py  pyoptoolshelpers.py  qthelpers.py  ray.py  raysarray.py  raysparallel.py  rayspoint.py  rectmirror.py  reports.py  rightangleprism.py  roundmirror.py  selectionhelpers.py  sensor.py  sensorspanel.py  simpledmd.py  sphericallens.py  spotdiagram.py  thicklens.py  wbcommand.py  (+2 more)
freecad/pyoptools/pyOpToolsWB/optimize/: __init__.py  merit_functions.py  optimization_worker.py  optimize_gui.py  optimize_menu.py
freecad/pyoptools/pyOpToolsWB/utils/: __init__.py  enable_disable.py  wipe.py
freecad/pyoptools/pyOpToolsWB/widgets/: materialWidget.py  placementWidget.py
pyOpToolsWB/: README  __init__.py  aperture.py  bscube.py  catalogcomponent.py  cylindricallens.py  diffractiongratting.py  doubletlens.py  doveprism.py  lensdata.py  optimize.py  pentaprism.py  powelllens.py  propagate.py  pyoptoolshelpers.py  ray.py  raysarray.py  raysparallel.py  rayspoint.py  rectmirror.py  reports.py  rightangleprism.py  roundmirror.py  sensor.py  sphericallens.py  thicklens.py  wbcommand.py
