<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>pyOpTools Workbench</name>
  <description>An optics ray-tracing workbench based on pyOpTools</description>
  <version>0.0.1</version>
  <date>2023-03-20</date>
  <maintainer email="ramezquitao@cihologramas.com">Ricardo Amézquita Orozco</maintainer>
  <license file="LICENSE">GPL-3</license>
  <url type="repository" branch="master">https://github.com/cihologramas/freecad-pyoptools</url>
  <url type="readme">https://github.com/cihologramas/freecad-pyoptools/blob/master/README.md</url> 
  <depend>pyoptools</depend>
  <icon>freecad/pyoptools/resources/pyoptools.png</icon>
  <content>
    <workbench>
      <classname>PyOpToolsWorkbench</classname> 
      <subdirectory>./freecad/pyoptools/</subdirectory>
      <depend>pyoptools</depend>
      
      <tag>raytracing</tag>
      <tag>optics</tag>
    </workbench>
  </content>
</package>
